# aline-brand-workbench

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  compose.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile  __init__.py
apps/api/app/: __init__.py  celery_app.py  config.py  health.py  main.py  settings.py  tasks.py  worker.py
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
backend/: __init__.py
backend/agents/: __init__.py  errors.py  ports.py  prompts.py  testing.py  workflow.py
backend/application/: __init__.py  exports.py  projects.py  stage_runs.py  stages.py
backend/exports/: __init__.py  artifact_service.py  errors.py  models.py  service.py
backend/infrastructure/: __init__.py
backend/providers/: __init__.py
contracts/examples/: demo-completed-flow.json  demo-flow.json  demo-proposal-manifest.json
docs/: backend-1-ip-materials-handoff.md  backend-1-logo-vi-handoff.md  backend-1-materials-review-handoff.md  backend-1-proposal-export-ready-handoff.md  backend-1-review-proposal-handoff.md  backend-1-vi-ip-handoff.md  backend-2-main-ready-handoff.md  backend-3-runbook.md  backend1-api-contract.md  frontend-1-handoff.md  team-plan.md
infra/docker/: README.md  python.Dockerfile  web.Dockerfile
infra/migrations/: README.md  env.py
infra/nginx/: default.conf  nginx.conf
prototypes/legacy/: index.html
scripts/: check-environment.sh  run-e2e.sh  verify-stack.sh
tests/api/: test_health.py  test_openapi_contract.py  test_project_routes.py
tests/backend/: test_infrastructure_adapters.py  test_projects.py
tests/e2e/: README.md  test_stack_smoke.py
(+88 files in other folders)
