[project]
name = "brand-agent-studio"
version = "0.1.0"
description = "Brand Agent Studio backend environment baseline"
requires-python = ">=3.12,<3.13"
dependencies = [
  "boto3>=1.35,<2",
  "fastapi>=0.115,<1",
  "langgraph>=0.4,<1",
  "pydantic-settings>=2.7,<3",
  "psycopg[binary]>=3.2,<4",
  "redis>=5.2,<7",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.11,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["apps/api", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
